<resources>
    <string name="app_name">Sorting Hat</string>
    <string name="description">emblem</string>
    <string name="title">The Sorting Hat</string>
    <string name="btn_start">Start</string>
    <string name="homescreen">homescreen</string>
    <string name="oval">oval</string>

    <string name="question1">Which of these would you use to describe you?</string>
    <string name="s1a1">Brave</string>
    <string name="s1a2">Loyal</string>
    <string name="s1a3">Creative</string>
    <string name="s1a4">Cunning</string>

    <string name="gryffindor">GRYFFINDOR</string>
    <string name="ravenclaw">RAVENCLAW</string>
    <string name="hufflepuff">HUFFLEPUFF</string>
    <string name="slytherin">SLYTHERIN</string>
    <string name="pet">Which pet would you prefer?</string>
    <string name="name">What is your name?</string>

    <string name="Q3">Which class would you like to take the most?</string>
    <string name="trans">Transfiguration</string>
    <string name="potions">Potions</string>
    <string name="defense">Defense Against the Dark Arts</string>
    <string name="charms">Charms</string>
    <string name="btnNext">Next</string>

    <string name="witchard">Are you a witch or a wizard?</string>
    <string name="witch">Witch</string>
    <string name="wizard">Wizard</string>
    <string name="youre">You are a</string>
</resources>