<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetOne">

    <TextView
        android:id="@+id/txt_q1"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/question1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/btn_G1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="132dp"
        android:text="@string/s1a1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_R1"
        app:layout_constraintEnd_toStartOf="@+id/btn_H1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_R1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="4dp"
        android:text="@string/s1a3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_S1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_G1" />

    <Button
        android:id="@+id/btn_H1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="132dp"
        android:text="@string/s1a2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_S1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_G1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_S1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="43dp"
        android:text="@string/s1a4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_R1"
        app:layout_constraintTop_toBottomOf="@+id/btn_H1" />
</android.support.constraint.ConstraintLayout>